Fixed FlappyClone font on IE

--- a/static/FlappyClone/css/base.css
+++ b/static/FlappyClone/css/base.css
@@ -12,8 +12,15 @@ html, body {
 	position: relative;
 }
 @font-face {
-	font-family: FlappyFont;
-	src: url(../font/flappy.ttf);
+    font-family: 'FlappyFont';
+    src: url('../font/flappy.eot');
+    src: url('../font/flappy.eot?#iefix') format('embedded-opentype'),
+         url('../font/flappy.woff2') format('woff2'),
+         url('../font/flappy.woff') format('woff'),
+         url('../font/flappy.ttf') format('truetype'),
+         url('../font/flappy.svg#04b_19regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 #header {
@@ -22,14 +29,13 @@ html, body {
 	background-color: black;
 	vertical-align: middle;
 	
-	font-family: FlappyFont;
+	font-family: FlappyFont, sans-serif;
 	text-align: left;
 	color: gold;
 	text-shadow: 2px 2px 0px black, -2px 2px 0px black, 2px -2px 0px black, -2px -2px 0px black;
 }
 
 #header a {
-	color: inherit;
 	text-decoration: none;
 }
 
@@ -42,29 +48,28 @@ html, body {
 }
 
 #header-logo {
-	padding-top: 4px;
-}
-#header-logo > a {
+	display: inline-block;
+	
 	font-size: 24px;
 	padding: 4px 4px 4px 4px;
+	
+	color: gold;
 }
 
 #header-login {
-	pointer-events: none;
+	display: inline-block;
+	
 	font-size: 18px;
 	text-shadow: 1px 1px 0px black, -1px 1px 0px black, 1px -1px 0px black, -1px -1px 0px black;
 	top: 0;
 	right: 0;
 	padding-top: 7px;
-	width: 100%;
 	color: white;
 	text-align: right;
 	position: absolute;
-}
-
-#header-login > a {
-	pointer-events: auto;
 	padding: 7px 7px 7px 7px;
+	
+	color: white;
 }
 
 .clearfix:after {
